<resources>
    <string name="app_name">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_a_book">Add a book</string>
    <string name="add_a_film">Add a film</string>
    <string name="title">Title</string>
    <string name="url">Url</string>
    <string name="summary">Summary</string>
    <string name="rating">Rating (/100)</string>
    <string name="date_added">Date added</string>
    <string name="authors">Authors (separate with ",")</string>
    <string name="casting">Casting (separate with ",")</string>
    <string name="genres">Genres (separate with ",")</string>
    <string name="keywords">Keywords (separate with ",")</string>
    <string name="date_released">First released date</string>
    <string name="runtime">Runtime</string>
    <string name="cover">Cover link</string>
    <string name="members">Members</string>
    <string name="size">Size</string>
    <string name="sauvegarder">Save</string>
    <string name="link">Link</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="Tab1">Home</string>
    <string name="Tab2">Favorite</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>