<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPrimary"
    android:backgroundTint="@color/backgroundPrimary"
    tools:context=".FilmPage">

    <CheckBox
        android:id="@+id/detail_fav"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:background="@drawable/checkbox_heart_image"
        android:button="@null"
        android:buttonTint="#FFFFFF"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="setFavorite"
        app:layout_constraintBottom_toBottomOf="@+id/detail_cover"
        app:layout_constraintStart_toStartOf="@+id/detail_rating" />

    <ImageView
        android:id="@+id/detail_cover"
        android:layout_width="149dp"
        android:layout_height="212dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_slideshow" />

    <TextView
        android:id="@+id/detail_rating"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/item_page_rating_rounded"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/detail_cover"
        app:layout_constraintTop_toTopOf="@+id/detail_cover"
        tools:text="90" />

    <TextView
        android:id="@+id/detail_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/textSecondary"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/detail_rating"
        app:layout_constraintTop_toBottomOf="@+id/detail_rating"
        tools:text="123000" />

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/textPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_cover"
        tools:text="The Artist" />

    <TextView
        android:id="@+id/detail_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textColor="@color/textSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detail_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_title"
        tools:text="Comedy, Adventure · 2011-05-06 · 100 minutes" />

    <TextView
        android:id="@+id/detail_authors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textColor="@color/textSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/detail_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_info"
        tools:text="Authors: James Cameron · Steven Spielberg" />

    <TextView
        android:id="@+id/detail_casting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:textColor="@color/textSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_authors"
        tools:text="Casting: James Cameron · Steven Spielberg" />

    <TextView
        android:id="@+id/detail_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/textPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_casting"
        tools:text="Je l'ai pas vu mais ça parle d'un mec et d'un chien qui n'a jamais de croquettes." />

    <TextView
        android:id="@+id/detail_keywords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/textSecondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detail_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_summary"
        tools:text="noir et blanc · homme · chien · ennui" />

    <ImageButton
        android:id="@+id/detail_url_button"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/textUrl"
        android:contentDescription="@string/link"
        android:onClick="openUrl"
        app:layout_constraintStart_toStartOf="@+id/detail_rating"
        app:layout_constraintTop_toBottomOf="@+id/detail_members"
        app:srcCompat="@android:drawable/ic_menu_set_as" />

    <ImageButton
        android:id="@+id/detail_delete_button"
        style="@android:style/Widget.DeviceDefault.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00E91E63"
        android:contentDescription="@string/delete"
        android:onClick="deleteFilm"
        android:tint="#E91E63"
        app:layout_constraintEnd_toEndOf="@+id/detail_summary"
        app:layout_constraintTop_toBottomOf="@+id/detail_keywords"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>